# TER-3D-Detection

./: .gitignore  AUTHORS  Images à prendre.txt  Presentation TER.odp  README.md  TODOLIST  report.tex
catkin_ws/: .gitignore
catkin_ws/src/clusterisator/: CMakeLists.txt  package.xml
catkin_ws/src/clusterisator/msg/: Persons.msg
catkin_ws/src/clusterisator/src/: clusterisator_node.cpp
catkin_ws/src/perception_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/securisator/: CMakeLists.txt  package.xml
catkin_ws/src/securisator/msg/: Persons.msg
catkin_ws/src/securisator/src/: securisator_node.cpp
